# MONCHOOPS-APP

./: .gitignore  Cargo.toml  PLAN.md  PLAN_PHASE_7.md  TODO.md  funciones_py.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
chrome-extension/: README.md  manifest.config.ts  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
config/: buildConfig.ts
docs/: auto-update-api.md
electron/: package-lock.json  package.json
iptrade-api/: Cargo.toml
iptrade-api/.cargo/: config.toml
iptrade-api/src/: app_state.rs  background.rs  build_config.rs  config.rs  log_buffer.rs  main.rs  port.rs  setup.rs  timings.rs  util.rs
iptrade-api/src/middleware/: auth.rs  mod.rs
iptrade-api/src/routes/: accounts.rs  auth_ctrader.rs  bots.rs  common.rs  docs.rs  heartbeat.rs  license.rs  logs.rs  mod.rs  mt5_bridge.rs  system.rs
iptrade-api/src/services/: account_history.rs  connection_status.rs  copy_command.rs  copy_trading.rs  ctrader_connection.rs  ctrader_snapshot_connection.rs  license_client.rs  mod.rs  mt5_bridge_sync.rs  pos_mapping.rs  proto_oa.rs  slave_mapping.rs  tcp_bridge.rs
iptrade-api/src/services/ctrader/: account_loop.rs  copy_executor.rs  errors.rs  mod.rs  oauth.rs  snapshot.rs  symbols.rs
iptrade-api/src/services/metatrader/: install.rs  mod.rs
iptrade-api/src/state/: encrypt.rs  mod.rs  store.rs
public/: conclusion.txt  welcome.txt
scripts/: build-extension.mjs  build.mjs  bundle-chromium.mjs  kill-port.mjs  make-ico.mjs  obfuscate-electron.mjs  run-electron-dev.mjs  (+1 more)
src/: App.tsx  (+2 more)
(+172 files in other folders)
